Closed
Bug 1404022
Opened 4 years ago
Closed 3 years ago
setAttributeNode() is incorrectly deprecated.
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla58
Tracking | Status | |
---|---|---|
firefox58 | --- | fixed |
People
(Reporter: kevin, Assigned: ehsan)
Details
Attachments
(1 file)
4.77 KB,
patch
|
baku
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36 Steps to reproduce: I set an attribute on a dom object using setAttributeNode(). Actual results: Firefox console reported: "Use of setAttributeNode() is deprecated. Use setAttribute() instead." Expected results: No deprecation notice should have been issued. setAttributeNode() is part of the current standard. https://dom.spec.whatwg.org/#dom-element-setattributenode
Updated•4 years ago
|
Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Assignee | ||
Comment 2•3 years ago
|
||
These were marked as deprecated in bug 661327. bz, anne, do we stil want to pursue removing them some day?
Flags: needinfo?(bzbarsky)
Flags: needinfo?(annevk)
Comment 3•3 years ago
|
||
No, time to give up. Thanks kevin for reporting this.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(bzbarsky)
Flags: needinfo?(annevk)
Priority: -- → P3
Assignee | ||
Comment 4•3 years ago
|
||
We also have deprecation warnings for getAttributeNode/getAttributeNodeNS/removeAttributeNode/createAttribute/createAttributeNS. If those also need to be revised we should file follow-up bugs.
Assignee: nobody → ehsan
Keywords: dev-doc-needed
Assignee | ||
Comment 5•3 years ago
|
||
Attachment #8916093 -
Flags: review?(amarchesini)
Assignee | ||
Comment 6•3 years ago
|
||
(In reply to :Ehsan Akhgari (needinfo please, extremely long backlog) from comment #4) > We also have deprecation warnings for > getAttributeNode/getAttributeNodeNS/removeAttributeNode/createAttribute/ > createAttributeNS. Anne confirmed on IRC. Filed bug 1406493 as a follow-up.
Updated•3 years ago
|
Attachment #8916093 -
Flags: review?(amarchesini) → review+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e136f53974d8 Remove the deprecation warnings for Element.setAttribute/setAttributeNS; r=baku
![]() |
||
Comment 8•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/e136f53974d8
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Comment 9•3 years ago
|
||
I've checked the docs, and we don't mention it being deprecated anywhere. We just say that setAttribute() is the more common way of setting attributes.
Keywords: dev-doc-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•