Bug 1404022 - Remove the deprecation warnings for Element.setAttribute/setAttributeNS.